styles.css
html, body {
    margin: 0;
    font-size: 18px;
    font-family: 'Raleway', sans-serif;
    box-sizing: border-box;
    background-color: rgb(200,200,200);
}

body{
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.logo {
    width: 30rem;
    transition: transform .3s;
    padding: 0 1rem;
}

.logo:hover {
    cursor: pointer;
    transform: scale(1.5);
}

.top__name {
    margin: 0;
    font-weight: 800;
}

.bottom {
    display: flex;
    justify-content: flex-end;
}

.bottom__company {
    background-color: black;
    color: white;
    padding: .25rem 2rem .25rem 1rem;
    margin: 0;
    font-weight: 800;
}

@media (max-width: 490px) {
    body {
        font-size: 14px;
    }

    .logo:hover {
        cursor: pointer;
        transform: scale(1);
    }
}

@media (max-width: 390px) {
    body {
        font-size: 12px;
    }
}

@media (max-width: 350px) {
    body {
        font-size: 10px;
    }
}

